--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:3333
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+ENDPOINT_API_PRISMIC=https://devcommercetg.cdn.prismic.io/api/v2
